# advent_of_code

./: .gitignore  pyproject.toml
2022/day_1/: main.py
2022/day_2/: main.py
2022/day_3/: main.py
2022/day_4/: main.py
2022/day_5/: main.py
2022/day_6/: main.py
2023/day_01/: main.py  test.txt
2023/day_02/: main.py
2023/day_04/: main.py
aoc_2024/: utils.py
aoc_2024/day_1/: main.py
aoc_2024/day_2/: main.py
aoc_2024/day_3/: main.py
aoc_2024/day_4/: main.py
aoc_2024/day_5/: main.py  topological_sort.py  topological_sort.txt
aoc_2025/: utils.py
aoc_2025/day_1/: main.py
aoc_2025/day_2/: main.py
aoc_2025/day_3/: main.py
aoc_2025/day_4/: main.py
aoc_2025/day_5/: main.py
aoc_2025/day_6/: main.py
