[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = "Advent of Code Solutions (Python)"
authors = ["Joseph Amoss <j.amoss22@outlook.com>"]
readme = "README.md"
packages = [{ include = "aoc_2024" }]
package-mode = false


[tool.poetry.dependencies]
python = ">=3.12"



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
